docs: tracker at 100% — all 46 tester issues resolved
8 CRITICAL, 18 HIGH, 12 MEDIUM, 5 PERFORMANCE, 3 BREAKING — all resolved.
Includes 5 false positives identified and documented.
3,852 tests pass with zero failures across all 22 services.

Co-Authored-By: Claude Opus 4.6 (1M context) <noreply@anthropic.com>